Project

General

Profile

Actions

Bug #18077

closed

multisite: lock is not released when RGWMetaSyncShardCR::full_sync() fails to write marker

Added by Casey Bodley over 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20641: jewel: multisite: lock is not released when RGWMetaSyncShardCR::full_sync() fails to write markerResolvedNathan CutlerActions
Copied to rgw - Backport #20642: kraken: multisite: lock is not released when RGWMetaSyncShardCR::full_sync() fails to write markerRejectedActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Backport changed from jewel to jewel, kraken
Actions #2

Updated by Yehuda Sadeh almost 7 years ago

  • Status changed from New to Pending Backport
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20641: jewel: multisite: lock is not released when RGWMetaSyncShardCR::full_sync() fails to write marker added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20642: kraken: multisite: lock is not released when RGWMetaSyncShardCR::full_sync() fails to write marker added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF