rgw: lock is not released when set sync marker is failed.

Fixes: http://tracker.ceph.com/issues/18077

Signed-off-by: Zhang Shaowen <zhangshaowen@cmss.chinamobile.com>
(cherry picked from commit 65ef596ce1d83515338367f69b1bf0ce0ab96ae5)